# Bingo-Server

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  format.py  format_indent.py  main.cpp
config/: server_config.json
docs/: logger_doc.md  message_formats.json  message_formnats.json  naming_conventions.md  requirements.txt  revised_msg_formats.json  runtime_logics.txt  uWebSocketInstall.md
include/: authenticator.h  debug.h  enums.h  error_codes.h  file_paths.h  log.h  message_handler.h  message_keys.h  message_parser.h  message_processor.h  message_structures.h  message_types.h  mutex_queue.h  server.h  session.h  session_manager.h  thread_safe_queue.h  typedefs.h  user_session.h  user_session_manager.h
include/MessageResponseFactory/: ChangePasswordMessageResponse.h  ChangePasswordResponse.h  ChatHistoryListMessage.h  ChatMessageResponse.h  ForcedLogoutMessage.h  FriendsListMessage.h  GetChatMessageIDResponse.h  IMessageResponse.h  LoginMessageResponse.h  LogoutMessageResponse.h  PendingFriendRequests.h  ReconnectMessageResponse.h  SearchUserRequestMessageResponse.h  SearchUserRequestResponse.h  SignupMessageResponse.h  TokenLoginResponse.h  UpdateProfileResponse.h  UserProfileMessage.h
include/MessageTypes/: LoginMessageResponse.h  LogoutMessageResponse.h
include/SignalHandler/: handle_signals.h
include/handlers/: ChangePasswordRequestHandler.h  ChatMessageHandler.h  FriendReqRequestHandler.h  FriendReqResponseHandler.h  GetMessageIdRequestHandler.h  HandlerUtils.h  IRequestHandler.h  LoginRequestHandler.h  LogoutRequestHandler.h  ReconnectRequestHandler.h  SearchUserRequestHandler.h  SignupRequestHandler.h  UpdateProfileRequestHandler.h
include/utils/: config_reader.h  time.h  token_generator.h  utils.h
src/: authenticator.cpp  debug.cpp  handle_signals.cpp  log.cpp  message_handler.cpp  message_parser.cpp  message_processor.cpp  server.cpp  session_manager.cpp  time.cpp  user_session_manager.cpp
src/MessageResponseFactory/: ChangePasswordMessageResponse.cpp  ChangePasswordResponse.cpp  ChatHistoryListMessage.cpp  ChatMessageResponse.cpp  ForcedLogoutMessage.cpp  FriendsListMessage.cpp  GetChatMessageIDResponse.cpp  LoginMessageResponse.cpp  LogoutMessageResponse.cpp  PendingFriendRequests.cpp  ReconnectMessageResponse.cpp  SearchUserRequestMessageResponse.cpp  SearchUserRequestResponse.cpp  SignupMessageResponse.cpp  TokenLoginResponse.cpp  UpdateProfileResponse.cpp  UserProfileMessage.cpp
src/MessageTypes/: IMessageResponse.h  LoginMessageResponse.cpp  LoginMessageResponse.h  LogoutMessageResponse.cpp  LogoutMessageResponse.h
src/SignalHandler/: handle_signals.cpp
src/handlers/: ChangePasswordRequestHandler.cpp  ChatMessageHandler.cpp  FriendReqRequestHandler.cpp  FriendReqResponseHandler.cpp  GetMessageIdRequestHandler.cpp  HandlerUtils.cpp  LoginRequestHandler.cpp  LogoutRequestHandler.cpp  ReconnectRequestHandler.cpp  SearchUserRequestHandler.cpp  SignupRequestHandler.cpp  UpdateProfileRequestHandler.cpp
src/utils/: config_reader.cpp  log.cpp  logger.cpp  time.cpp  token_generator.cpp
